pages changed with new content map

--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
     <!--CONTACT US AREA-->
     <section class="contact-area" id="contact">
         <div class="map-area relative">
-            <div id="map" style="width: 100%; height: 400px;"> </div>
+            <div style="width: 100%; height: 400px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.043738522136!2d-79.73112398450112!3d43.68885407912007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3e22cd75d501%3A0x188e9af3d8aa1877!2s225+Rutherford+Rd+S+%23302%2C+Brampton%2C+ON+L6W+4N7%2C+Canada!5e0!3m2!1sen!2sin!4v1553534643811" width="1360" height="420" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
         </div>
         <div class="contact-form-area section-padding gray-bg">
             <div class="container">
